--- a/app/src/main/res/layout/percentage_item.xml
+++ b/app/src/main/res/layout/percentage_item.xml
@@ -2,15 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="16dp"
     android:gravity="center_vertical">
 
-    <View
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivProfile"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/circle_background" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/profile_imaage"
+        app:shapeAppearanceOverlay="@style/CircularImageStyle" />
+
 
     <LinearLayout
         android:layout_width="0dp"
@@ -30,7 +34,7 @@
             android:id="@+id/tvAmount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="$0.00"
+            android:text="0.00"
             android:textColor="@color/gray" />
     </LinearLayout>
 
