--- a/app/src/main/res/layout/fragment_amoun_unt_equally.xml
+++ b/app/src/main/res/layout/fragment_amoun_unt_equally.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
     tools:context=".UI.Fragment.AmountUnEquallyFragment">
 
@@ -51,7 +52,7 @@
         android:id="@+id/fabAddMembers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginHorizontal="16dp"
         android:src="@drawable/savecontact"
         android:contentDescription="Add Members"
         app:layout_constraintEnd_toEndOf="parent"
