--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -46,6 +46,9 @@
         <action
             android:id="@+id/action_billDetails_to_personalExpenseFragment"
             app:destination="@id/personalExpenseFragment" />
+        <argument
+            android:name="friendData"
+            app:argType="com.appdev.split.Model.Data.FriendContact" />
 
     </fragment>
     <fragment
