--- a/app/src/main/res/layout/bill_detail_item_layout.xml
+++ b/app/src/main/res/layout/bill_detail_item_layout.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_6sdp"
         android:layout_weight="1"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
