--- a/app/src/main/res/layout/fragment_bill_details.xml
+++ b/app/src/main/res/layout/fragment_bill_details.xml
@@ -11,12 +11,12 @@
     <ImageButton
         android:id="@+id/back_btn"
         style="@style/iconTintColor"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:padding="@dimen/_3sdp"
-        android:src="@drawable/arrow_back" />
+        android:src="@drawable/back" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,6 +24,7 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:background="@drawable/rounded_card_background"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:padding="16dp">
 
         <com.google.android.material.imageview.ShapeableImageView
@@ -47,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Expense Title"
-                android:textSize="18sp"
+                android:textSize="@dimen/_17ssp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -60,28 +61,39 @@
                     android:layout_height="wrap_content"
                     android:text="24 Nov , 2024"
                     android:textColor="@color/gray"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/_13ssp" />
             </LinearLayout>
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/edit"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:background="?attr/selectableItemBackground"
-            android:src="@drawable/ic_edit"
-            app:tint="@color/gray" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
 
-        <ImageView
-            android:id="@+id/delete"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center_vertical"
-            android:background="?attr/selectableItemBackground"
-            android:src="@drawable/delete"
-            app:tint="@color/gray" />
+            <ImageButton
+                android:id="@+id/edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Edit"
+                android:layout_marginBottom="@dimen/_4sdp"
+                android:padding="@dimen/_3sdp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:src="@drawable/ic_edit"
+                app:tint="@color/gray" />
+
+            <ImageButton
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3sdp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:src="@drawable/delete"
+                app:tint="@color/gray" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <TextView
