--- a/app/src/main/res/layout/fragment_personal_expense.xml
+++ b/app/src/main/res/layout/fragment_personal_expense.xml
@@ -17,13 +17,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/closeIcon"
             style="@style/iconTintColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:background="?attr/selectableItemBackground"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/back" />
 
         <TextView
