--- a/app/src/main/res/layout/fragment_friends_all_expenses.xml
+++ b/app/src/main/res/layout/fragment_friends_all_expenses.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".UI.Activity.FriendsAllExpenses">
+    tools:context=".UI.Fragment.FriendsAllExpenses">
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_view_container"
