--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="gray">#8C8C8E</color>
     <color name="black">#FF000000</color>
+    <color name="textblack">#1C1B1F</color>
     <color name="white">#FFFFFFFF</color>
     <color name="shadow_steel">#4b4b4b</color>
     <color name="colorIcon">#0288D1</color>
