--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:shimmer_duration="1000">
+
             <ViewStub
                 android:id="@+id/shimmer_view_bar"
                 android:layout_width="match_parent"
@@ -31,6 +32,7 @@
             android:layout_height="match_parent"
             android:layout_below="@id/shimmer_view_top"
             app:shimmer_duration="1000">
+
             <ViewStub
                 android:id="@+id/shimmer_view_home"
                 android:layout_width="match_parent"
@@ -54,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Hello, Margo ✌️"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/circular_image"
@@ -66,10 +68,10 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
         android:id="@+id/mainBody"
-        android:layout_below="@id/topLayer"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/topLayer">
         <!-- Greeting Header -->
 
         <!-- Title -->
@@ -84,33 +86,40 @@
             android:textStyle="bold" />
 
         <!-- Card View Section -->
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/cameraInput"
+            app:cardCornerRadius="20dp"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_below="@id/heyMessage"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/rounded_card_background"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginBottom="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Need to divide amount?"
-                android:textColor="#1C1C1E"
-                android:textSize="18sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/home_back_four"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/open_camera_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_7sdp"
-                android:backgroundTint="#1C1C1E"
-                android:text="Open camera or upload bill"
-                android:textColor="#FFFFFF" />
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Want to split the bill?"
+                    android:textColor="#1C1C1E"
+                    android:textSize="18sp" />
 
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/add_expense"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_7sdp"
+                    app:cornerRadius="7dp"
+                    android:backgroundTint="#1C1C1E"
+                    android:text="Start Your Split"
+                    android:textColor="#FFFFFF" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
         <!-- Recent Bills Header -->
         <LinearLayout
             android:id="@+id/recentTitle"
@@ -164,68 +173,6 @@
             android:clipToPadding="false" />
 
 
-        <!-- FAB Menu -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintFabMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/_42sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/mainFab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="8dp"
-                app:backgroundTint="@color/green"
-                app:borderWidth="0dp"
-                app:elevation="6dp"
-                app:fabCustomSize="56dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:maxImageSize="24dp"
-                app:srcCompat="@drawable/list"
-                app:tint="@color/white" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/contactFab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toTopOf="@id/mainFab"
-                app:layout_constraintEnd_toEndOf="@id/mainFab"
-                android:layout_marginBottom="@dimen/_10sdp"
-                app:backgroundTint="@color/green"
-                app:srcCompat="@drawable/add_contac"
-                app:tint="@color/white"
-                app:fabCustomSize="56dp"
-                app:maxImageSize="24dp"
-                app:borderWidth="0dp"
-                app:elevation="6dp" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/expenseFab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:visibility="invisible"
-                app:backgroundTint="@color/green"
-                app:layout_constraintBottom_toTopOf="@id/contactFab"
-                app:layout_constraintEnd_toEndOf="@id/contactFab"
-                app:srcCompat="@drawable/history_night"
-                app:tint="@color/white"
-                app:fabCustomSize="56dp"
-                app:maxImageSize="24dp"
-                app:borderWidth="0dp"
-                app:elevation="6dp" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </RelativeLayout>
 
 </RelativeLayout>
